# openAAS

./: AssetAdministrationShell.html  CMakeLists.txt  DescriptionImplementation.html  FormalDescriptionofArchitecture.html  ImplementationofArchitecture.html  README.md  RealizationofAccess.html  Realizationofdescription.html  index.html  params.json  propertyModel.html
examples/: server_properties.c
implementation/: README.MD
implementation/OPCUA/: README.MD
implementation/OPCUA/aas/: openaas.bsd  openaas.csv  openaas.xml  openaas.xsd
implementation/OPCUA/identification/: identification.bsd  identification.csv  identification.xml  identification.xsd
implementation/OPCUA/lifecycle/: lce.bsd  lce.csv  lce.xml  lce.xsd
implementation/OPCUA/propertyValueStatement/: pvs.bsd  pvs.csv  pvs.xml  pvs.xsd
open62541/: nodeset.c  nodeset.h  open62541.c  open62541.h
